Display a simple tooltip text for empty labels in verbose states

As of M57, verbose state bubbles are used to display extension names.
When the process for an extension crashes or is killed, the bubble label will
be empty. This leads to a leading dot to be displayed in the bubble tooltip.
This CL fixes that.

BUG=691922

Review-Url: https://codereview.chromium.org/2697903002
Cr-Commit-Position: refs/heads/master@{#450484}

Former-commit-id: 1a2fcc1a4c4a40629e10b1a067004ace091ef341