chrome/browser/ui/cocoa/location_bar/security_state_bubble_decoration.mm
@@ -279,8 +279,12 @@ NSPoint SecurityStateBubbleDecoration::GetBubblePointInFrame(NSRect frame) {
 }
 
 NSString* SecurityStateBubbleDecoration::GetToolTip() {
-  return [NSString stringWithFormat:@"%@. %@", full_label_.get(),
-                   l10n_util::GetNSStringWithFixup(IDS_TOOLTIP_LOCATION_ICON)];
+  NSString* tooltip_icon_text =
+      l10n_util::GetNSStringWithFixup(IDS_TOOLTIP_LOCATION_ICON);
+  if ([full_label_ length] == 0)
+    return tooltip_icon_text;
+  return [NSString
+      stringWithFormat:@"%@. %@", full_label_.get(), tooltip_icon_text];
 }
 
 //////////////////////////////////////////////////////////////////
